<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/id_lab_result_item_list_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_lab_result_item_list_code"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_item_list_header_column_name_code"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/id_lab_result_item_list_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_item_list_header_column_name_name"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/id_lab_result_item_list_value"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_item_list_header_column_name_value"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/id_lab_result_item_list_unit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_item_list_header_column_name_unit"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/id_lab_result_item_list_range"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_item_list_header_column_name_range"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_below="@+id/id_lab_result_item_list_header"/>

</RelativeLayout>