<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_lab_result_item_editing"
    tools:context="com.fansen.phr.activities.LabResultItemEditingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/lab_item_list_header_column_name_code"
            android:gravity="center|left"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/id_lab_result_item_editing_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="#e5e5e5"
            android:hint="@string/hint_mandatory"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/lab_item_list_header_column_name_name"
            android:gravity="center|left"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/id_lab_result_item_editing_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="#e5e5e5"
            android:hint="@string/hint_mandatory"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/lab_item_list_header_column_name_value"
            android:gravity="center|left"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/id_lab_result_item_editing_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="#e5e5e5"
            android:hint="@string/hint_mandatory"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/lab_item_list_header_column_name_unit"
            android:gravity="center|left"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/id_lab_result_item_editing_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="#e5e5e5"
            android:hint="@string/hint_mandatory"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/lab_item_list_header_column_name_range"
            android:gravity="center|left"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/id_lab_result_item_editing_range"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="#e5e5e5"
            android:hint="@string/hint_mandatory"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
</LinearLayout>
